// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Successfully loaded a Document in view 1`] = `
<div
  className="timeline__view"
>
  <TimelineRadioButtons
    onChange={[Function]}
    selectedOption="Documents"
  />
  <Timeline
    onItemClick={[Function]}
    selectedOption="Documents"
    timelineItems={
      Array [
        Object {
          "content": "Amendment 13",
          "id": "o_dRqrNJ62wzlgLilTrLxkHqGmvAS9qTpa4z4pjyFqA=",
          "idx": "o_dRqrNJ62wzlgLilTrLxkHqGmvAS9qTpa4z4pjyFqA=",
          "kind": "document",
          "start": 1865-12-06T00:00:00.000Z,
        },
      ]
    }
  />
  <TimelinePreviewContainer
    social={
      Object {
        "cut": Array [
          54,
          86,
        ],
        "fact": "o_dRqrNJ62wzlgLilTrLxkHqGmvAS9qTpa4z4pjyFqA=",
        "kind": "textCut",
      }
    }
  />
</div>
`;

exports[`Successfully loaded a Video in view 1`] = `
<div
  className="timeline__view"
>
  <TimelineRadioButtons
    onChange={[Function]}
    selectedOption="Debates"
  />
  <Timeline
    onItemClick={[Function]}
    selectedOption="Debates"
    timelineItems={
      Array [
        Object {
          "content": "Donald Trump - Hillary Clinton (2/3)",
          "id": "iEfwIxM7MmnOKb7zt4HqW8IxUWy6F7a236fSOQlUUWI=",
          "idx": "iEfwIxM7MmnOKb7zt4HqW8IxUWy6F7a236fSOQlUUWI=",
          "kind": "video",
          "start": 2016-10-09T00:00:00.000Z,
        },
      ]
    }
  />
  <TimelinePreviewContainer
    social={
      Object {
        "cut": Array [
          0,
          15,
        ],
        "fact": "iEfwIxM7MmnOKb7zt4HqW8IxUWy6F7a236fSOQlUUWI=",
        "kind": "videoCut",
      }
    }
  />
</div>
`;
